feat: added hardhat task query-eth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "@unit/*": ["test/unit/*"]
     }
   },
-  "include": ["./scripts", "./test", "./deploy"],
+  "include": ["./scripts", "./tasks", "./test", "./deploy"],
   "files": ["./hardhat.config.ts"]
 }
